@@ -18,6 +18,8 @@ xine-lib (1.1.16) 2008-??-??
   * Fix MMS media requests where the URI contains %-encoded characters.
   * Fix two hangs related to stopping playback of broken audio streams where
     no audio data is sent to the output thread.
+  * Fix WAV demuxer to send the last frames when they don't fit perfectly into
+    the buffer
 
 xine-lib (1.1.15) 2008-08-14
   * Security fixes:
